# MandelBrot-InParallel

./: CMakeLists.txt  Mandelbrot.cpp  Mandelbrot.h  README.md  RgbColor.h  Tga.cpp  Tga.h  main.cpp
